--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="play-pause-button" title="Play/Pause"><i class="fas fa-play"></i> Play</button>
         <div class="pace-control">
             <button id="minus-button" title="Decrease BPM"><i class="fas fa-minus"></i></button>
-            <input type="number" id="bpm-input" value="30" min="5" max="60" aria-label="Pace (BPM)">
+            <input type="number" id="bpm-input" value="30" min="5" max="60" aria-label="Pace">
             <button id="plus-button" title="Increase BPM"><i class="fas fa-plus"></i></button>
             <label for="bpm-input">Pace (BPM)</label>
         </div>
